Attempt to fix Step 1 numbered list markdown (still WIP)

--- a/docs-site/docs/08_管理グループとポリシー.md
+++ b/docs-site/docs/08_管理グループとポリシー.md
@@ -745,17 +745,16 @@ data "alz_architecture" "this" {
 これを使うと：
 
 1. **プロバイダー設定で指定したYAMLを自動で読む**
-
 2. **name で指定したアーキテクチャを探す**
 
    ```hcl
    name = var.architecture_name  # "alz_custom"
    ```
 
-   - `lib/architecture_definitions/alz_custom.alz_architecture_definition.yaml` を読む
+   `lib/architecture_definitions/alz_custom.alz_architecture_definition.yaml` を読む
 
 3. **YAMLの内容を解析する**
-   
+
    **alz_custom.alz_architecture_definition.yaml の中身**:
 
    ```yaml
@@ -780,7 +779,7 @@ data "alz_architecture" "this" {
    ```
 
 4. **アーキタイプ定義も読み込む**
-   
+
    各管理グループの `archetypes: [root_custom]` を見て、`lib/archetype_definitions/root_custom.alz_archetype_override.yaml` も読む：
    
    ```yaml
@@ -792,7 +791,7 @@ data "alz_architecture" "this" {
    ```
 
 5. **公式ライブラリのポリシー定義も読み込む**
-   
+
    GitHub上の公式ライブラリから、`Deny-Classic-Resources`とか`Deploy-MDFC-Config`とかのポリシー定義を全部読み込む。
 
 6. **カスタム設定を適用**
@@ -802,8 +801,9 @@ data "alz_architecture" "this" {
    policy_default_values        = var.policy_default_values
    ```
 
-   - `policy_assignments_to_modify`: 「このポリシーのパラメータを変更」
-   - `policy_default_values`: 「Log AnalyticsのIDはこれ」みたいなデフォルト値
+   `policy_assignments_to_modify`: 「このポリシーのパラメータを変更」
+   
+   `policy_default_values`: 「Log AnalyticsのIDはこれ」みたいなデフォルト値
 
 #### 結果、何が手に入るか
 
