Fix: 番号をべた書きに変更（マークダウン番号リストの制限を回避）

--- a/docs-site/docs/08_管理グループとポリシー.md
+++ b/docs-site/docs/08_管理グループとポリシー.md
@@ -744,66 +744,65 @@ data "alz_architecture" "this" {
 
 これを使うと：
 
-1. **プロバイダー設定で指定したYAMLを自動で読む**
-2. **name で指定したアーキテクチャを探す**
+- **1. プロバイダー設定で指定したYAMLを自動で読む**
+- **2. name で指定したアーキテクチャを探す**
 
-   ```hcl
-   name = var.architecture_name  # "alz_custom"
-   ```
+  ```hcl
+  name = var.architecture_name  # "alz_custom"
+  ```
 
-   `lib/architecture_definitions/alz_custom.alz_architecture_definition.yaml` を読む
+  `lib/architecture_definitions/alz_custom.alz_architecture_definition.yaml` を読む
+- **3. YAMLの内容を解析する**
 
-3. **YAMLの内容を解析する**
+  **alz_custom.alz_architecture_definition.yaml の中身**:
 
-   **alz_custom.alz_architecture_definition.yaml の中身**:
+  ```yaml
+  name: alz_custom
+  management_groups:
+    - id: alz
+      display_name: Azure Landing Zones
+      parent_id: root
+      archetypes:
+        - root_custom
+    - id: platform
+      display_name: Platform
+      parent_id: alz
+      archetypes:
+        - platform_custom
+    - id: management
+      display_name: Management
+      parent_id: platform
+      archetypes:
+        - management_custom
+    # ...
+  ```
 
-   ```yaml
-   name: alz_custom
-   management_groups:
-     - id: alz
-       display_name: Azure Landing Zones
-       parent_id: root
-       archetypes:
-         - root_custom
-     - id: platform
-       display_name: Platform
-       parent_id: alz
-       archetypes:
-         - platform_custom
-     - id: management
-       display_name: Management
-       parent_id: platform
-       archetypes:
-         - management_custom
-     # ...
-   ```
+- **4. アーキタイプ定義も読み込む**
 
-4. **アーキタイプ定義も読み込む**
+  各管理グループの `archetypes: [root_custom]` を見て、`lib/archetype_definitions/root_custom.alz_archetype_override.yaml` も読む：
+  
+  ```yaml
+  name: root_custom
+  base_archetype: root
+  policy_assignments_to_add: []
+  policy_assignments_to_remove: []
+  # ...
+  ```
 
-   各管理グループの `archetypes: [root_custom]` を見て、`lib/archetype_definitions/root_custom.alz_archetype_override.yaml` も読む：
-   
-   ```yaml
-   name: root_custom
-   base_archetype: root
-   policy_assignments_to_add: []
-   policy_assignments_to_remove: []
-   # ...
-   ```
+- **5. 公式ライブラリのポリシー定義も読み込む**
 
-5. **公式ライブラリのポリシー定義も読み込む**
+  GitHub上の公式ライブラリから、`Deny-Classic-Resources`とか`Deploy-MDFC-Config`とかのポリシー定義を全部読み込む。
 
-   GitHub上の公式ライブラリから、`Deny-Classic-Resources`とか`Deploy-MDFC-Config`とかのポリシー定義を全部読み込む。
+- **6. カスタム設定を適用**
 
-6. **カスタム設定を適用**
+  ```hcl
+  policy_assignments_to_modify = var.policy_assignments_to_modify
+  policy_default_values        = var.policy_default_values
+  ```
 
-   ```hcl
-   policy_assignments_to_modify = var.policy_assignments_to_modify
-   policy_default_values        = var.policy_default_values
-   ```
-
-   `policy_assignments_to_modify`: 「このポリシーのパラメータを変更」
-   
-   `policy_default_values`: 「Log AnalyticsのIDはこれ」みたいなデフォルト値
+  `policy_assignments_to_modify`: 「このポリシーのパラメータを変更」
+  
+  `policy_default_values`: 「Log AnalyticsのIDはこれ」みたいなデフォルト値
 
 #### 結果、何が手に入るか
 
