Add GitHub link for official ALZ library in Step 1.5

--- a/docs-site/docs/08_管理グループとポリシー.md
+++ b/docs-site/docs/08_管理グループとポリシー.md
@@ -752,6 +752,7 @@ data "alz_architecture" "this" {
   ```
 
   `lib/architecture_definitions/alz_custom.alz_architecture_definition.yaml` を読む
+
 - **3. YAMLの内容を解析する**
 
   **alz_custom.alz_architecture_definition.yaml の中身**:
@@ -792,6 +793,12 @@ data "alz_architecture" "this" {
 - **5. 公式ライブラリのポリシー定義も読み込む**
 
   GitHub上の公式ライブラリから、`Deny-Classic-Resources`とか`Deploy-MDFC-Config`とかのポリシー定義を全部読み込む。
+
+  **公式ライブラリの場所**:
+
+  https://github.com/Azure/Azure-Landing-Zones-Library
+
+  このリポジトリには、Microsoft公式のALZポリシー定義・ポリシーセット定義・ロール定義などがすべて含まれている。ALZ Providerが自動的にこのリポジトリから最新のポリシーを読み込んで、`data.alz_architecture.this`に統合してくれる。
 
 - **6. カスタム設定を適用**
 
