Enhance Part 8: 公式ALZライブラリの詳細解説を大幅に強化（初心者向けに噛み砕いた説明を追加）

--- a/docs-site/docs/08_管理グループとポリシー.md
+++ b/docs-site/docs/08_管理グループとポリシー.md
@@ -10,7 +10,8 @@
     5. locals.tfの変換処理（データ加工）
     6. modules/management_groups/の解説（ローカルモジュール）
     7. 公式モジュールの内部解説（Azure/avm-ptn-alz/azurerm）
-    8. 実践パターン（カスタマイズ方法）
+    8. 公式のAzureポリシーを解説
+    9. 実践パターン（カスタマイズ方法）
 
 ---
 
@@ -799,6 +800,7 @@ data "alz_architecture" "this" {
   https://github.com/Azure/Azure-Landing-Zones-Library
 
   このリポジトリには、Microsoft公式のALZポリシー定義・ポリシーセット定義・ロール定義などがすべて含まれている。ALZ Providerが自動的にこのリポジトリから最新のポリシーを読み込んで、`data.alz_architecture.this`に統合してくれる。
+  公式のポリシーについては、この章のパート9で詳しく解説します。
 
 - **6. カスタム設定を適用**
 
@@ -1423,7 +1425,733 @@ parent_id = each.value.scope
 
 ---
 
-## Part 8: 実践パターン
+## Part 8: 公式ALZライブラリの詳細解説
+
+ステップ1の5で触れた公式ライブラリの中身を、実際のコードを見ながら詳しく理解していきましょう。
+
+### 公式ライブラリとは何か？
+
+**GitHubリポジトリ**:
+
+https://github.com/Azure/Azure-Landing-Zones-Library
+
+このリポジトリには、Microsoft公式のALZ（Azure Landing Zones）ポリシー定義・ポリシーセット定義・ロール定義などがすべて含まれています。
+
+**重要なポイント**: ALZ Providerが自動的にこのリポジトリを読み込むので、ユーザーは手動でクローンする必要はありません。
+
+### なぜ公式ライブラリが必要なのか？
+
+いちから全部のポリシーを書くのは大変です。
+
+**例えば、こんなポリシーが必要になります**:
+
+- 「Classic VMを作らせない」
+- 「NSGのないサブネットを作らせない」
+- 「VMに診断設定を自動で付ける」
+- 「Microsoft Defenderを自動で有効化」
+- 「Log Analyticsにログを送る」
+
+これを全部自分で書くと、数百個のJSONファイルを作る必要があります。
+
+**公式ライブラリがあれば**:
+
+→ 全部最初から用意されている！自分で書く必要なし！
+
+### 公式ライブラリの全体像
+
+```
+Azure-Landing-Zones-Library/
+├── platform/
+│   └── alz/                           # ALZ用の定義が全部ここ
+│       ├── archetype_definitions/     # 「management管理グループには何を適用？」的な定義
+│       │   ├── alz_root.alz_archetype_definition.json
+│       │   ├── alz_management.alz_archetype_definition.json
+│       │   ├── alz_connectivity.alz_archetype_definition.json
+│       │   ├── alz_identity.alz_archetype_definition.json
+│       │   ├── alz_landing_zones.alz_archetype_definition.json
+│       │   └── ...（全11個）
+│       ├── policy_definitions/        # 個別のポリシー定義（ルールの実体）
+│       │   ├── Deny-Classic-Resources.json
+│       │   ├── Deny-Subnet-Without-Nsg.json
+│       │   ├── Deploy-MDFC-Config.json
+│       │   ├── Deploy-VM-Monitoring.json
+│       │   └── ...（数百個！）
+│       ├── policy_set_definitions/    # ポリシーをまとめたセット
+│       │   ├── Deploy-Diagnostics-LogAnalytics.json
+│       │   ├── Enforce-Guardrails-Network.json
+│       │   └── ...（数十個）
+│       └── role_definitions/          # カスタムロール定義
+│           ├── Network-Management.json
+│           ├── Application-Owners.json
+│           └── ...（数個）
+└── README.md
+```
+
+### アーキタイプ定義とは？
+
+アーキタイプ定義は、「この管理グループにはどのポリシーを適用するか」をまとめたものです。
+
+**実際の例**: `alz_management.alz_archetype_definition.json`
+
+GitHubで見る: https://github.com/Azure/Azure-Landing-Zones-Library/blob/main/platform/alz/archetype_definitions/alz_management.alz_archetype_definition.json
+
+```json
+{
+  "name": "management",
+  "policy_assignments": [
+    "Deploy-AzActivity-Log",
+    "Deploy-VM-Monitoring",
+    "Deploy-VMSS-Monitoring",
+    "Deploy-Resource-Diag"
+  ],
+  "policy_definitions": [],
+  "policy_set_definitions": [],
+  "role_definitions": [],
+  "archetype_config": {
+    "parameters": {},
+    "access_control": {}
+  }
+}
+```
+
+**これを日本語に翻訳すると**:
+
+```
+management管理グループには、以下のポリシーを割り当てます：
+- Deploy-AzActivity-Log（Azure Activity Logを自動デプロイ）
+- Deploy-VM-Monitoring（VMの監視を自動設定）
+- Deploy-VMSS-Monitoring（VM Scale Setの監視を自動設定）
+- Deploy-Resource-Diag（リソースの診断設定を自動デプロイ）
+
+カスタムポリシー定義は追加しません（空）
+カスタムポリシーセット定義は追加しません（空）
+カスタムロール定義は追加しません（空）
+```
+
+**実際の動き**:
+
+```
+1. あなたが「management管理グループを作る」とYAMLに書く
+   ↓
+2. lib/archetype_definitions/management_custom.alz_archetype_override.yamlで
+   base_archetype: management と指定
+   ↓
+3. ALZ Providerが公式ライブラリのalz_management.alz_archetype_definition.jsonを読む
+   ↓
+4. 「Deploy-AzActivity-Log」「Deploy-VM-Monitoring」などのポリシーが
+   management管理グループに自動的に割り当てられる
+```
+
+### ポリシー定義の具体例
+
+ポリシー定義は、「どんなルールで、何を制限するか」を定義したものです。
+
+**例1: `Deny-Classic-Resources.json`**
+
+GitHubで見る: https://github.com/Azure/Azure-Landing-Zones-Library/blob/main/platform/alz/policy_definitions/Deny-Classic-Resources.json
+
+```json
+{
+  "name": "Deny-Classic-Resources",
+  "type": "Microsoft.Authorization/policyDefinitions",
+  "apiVersion": "2021-06-01",
+  "scope": null,
+  "properties": {
+    "policyType": "Custom",
+    "mode": "All",
+    "displayName": "Classic リソースを拒否",
+    "description": "クラシック リソース (VM, Storage など) の作成を拒否します。",
+    "metadata": {
+      "version": "1.0.0",
+      "category": "General",
+      "source": "https://github.com/Azure/Enterprise-Scale/",
+      "alzCloudEnvironments": [
+        "AzureCloud",
+        "AzureChinaCloud",
+        "AzureUSGovernment"
+      ]
+    },
+    "parameters": {},
+    "policyRule": {
+      "if": {
+        "anyOf": [
+          {
+            "field": "type",
+            "equals": "Microsoft.ClassicCompute/virtualMachines"
+          },
+          {
+            "field": "type",
+            "equals": "Microsoft.ClassicStorage/storageAccounts"
+          },
+          {
+            "field": "type",
+            "equals": "Microsoft.ClassicNetwork/virtualNetworks"
+          }
+        ]
+      },
+      "then": {
+        "effect": "Deny"
+      }
+    }
+  }
+}
+```
+
+**このポリシーを日本語に翻訳すると**:
+
+```
+ポリシー名: Deny-Classic-Resources
+
+ルール:
+  もし、作ろうとしているリソースが以下のどれかなら：
+    - Classic VM（Microsoft.ClassicCompute/virtualMachines）
+    - Classic Storage（Microsoft.ClassicStorage/storageAccounts）
+    - Classic VNet（Microsoft.ClassicNetwork/virtualNetworks）
+  
+  そのとき：
+    - 作成を拒否する（Deny）
+```
+
+**実際の動き**:
+
+```
+ユーザーが「Classic VMを作ろう」とAzureポータルでボタンを押す
+↓
+Azureが「これはMicrosoft.ClassicCompute/virtualMachinesだな」と判定
+↓
+ポリシーのifに引っかかる（anyOfの1個目に一致）
+↓
+thenが実行される（effect: Deny）
+↓
+「このリソースは作成できません」とエラーが出る
+```
+
+**例2: `Deploy-VM-Monitoring.json`**
+
+もっと複雑な例を見てみましょう。
+
+```json
+{
+  "name": "Deploy-VM-Monitoring",
+  "type": "Microsoft.Authorization/policyDefinitions",
+  "properties": {
+    "displayName": "VM に Azure Monitor Agent をデプロイ",
+    "policyType": "Custom",
+    "mode": "Indexed",
+    "description": "VM に Azure Monitor Agent (AMA) とデータ収集ルール (DCR) を自動的にデプロイします。",
+    "metadata": {
+      "version": "1.0.0",
+      "category": "Monitoring"
+    },
+    "parameters": {
+      "dataCollectionRuleId": {
+        "type": "String",
+        "metadata": {
+          "displayName": "データ収集ルール ID",
+          "description": "VM に関連付けるデータ収集ルールのリソース ID"
+        }
+      },
+      "effect": {
+        "type": "String",
+        "defaultValue": "DeployIfNotExists",
+        "allowedValues": [
+          "DeployIfNotExists",
+          "Disabled"
+        ],
+        "metadata": {
+          "displayName": "効果",
+          "description": "ポリシーの効果を有効化または無効化します"
+        }
+      }
+    },
+    "policyRule": {
+      "if": {
+        "allOf": [
+          {
+            "field": "type",
+            "equals": "Microsoft.Compute/virtualMachines"
+          },
+          {
+            "field": "location",
+            "in": [
+              "japaneast",
+              "japanwest"
+            ]
+          }
+        ]
+      },
+      "then": {
+        "effect": "[parameters('effect')]",
+        "details": {
+          "type": "Microsoft.Insights/dataCollectionRuleAssociations",
+          "roleDefinitionIds": [
+            "/providers/Microsoft.Authorization/roleDefinitions/92aaf0da-9dab-42b6-94a3-d43ce8d16293"
+          ],
+          "deployment": {
+            "properties": {
+              "mode": "incremental",
+              "template": {
+                "$schema": "https://schema.management.azure.com/schemas/2019-04-01/deploymentTemplate.json#",
+                "contentVersion": "1.0.0.0",
+                "parameters": {
+                  "vmName": {
+                    "type": "string"
+                  },
+                  "location": {
+                    "type": "string"
+                  },
+                  "dataCollectionRuleId": {
+                    "type": "string"
+                  }
+                },
+                "resources": [
+                  {
+                    "type": "Microsoft.Insights/dataCollectionRuleAssociations",
+                    "apiVersion": "2021-04-01",
+                    "name": "[concat(parameters('vmName'), '-dcr-association')]",
+                    "properties": {
+                      "dataCollectionRuleId": "[parameters('dataCollectionRuleId')]"
+                    }
+                  }
+                ]
+              },
+              "parameters": {
+                "vmName": {
+                  "value": "[field('name')]"
+                },
+                "location": {
+                  "value": "[field('location')]"
+                },
+                "dataCollectionRuleId": {
+                  "value": "[parameters('dataCollectionRuleId')]"
+                },
+              }
+            }
+          }
+        }
+      }
+    }
+  }
+}
+```
+
+**このポリシーを日本語に翻訳すると**:
+
+```
+ポリシー名: Deploy-VM-Monitoring
+
+パラメータ:
+  - dataCollectionRuleId: どのデータ収集ルールを使うか（必須）
+  - effect: このポリシーを有効にするか（デフォルト: DeployIfNotExists）
+
+ルール:
+  もし、作ろうとしているリソースが以下の条件を全て満たすなら：
+    - 種類がVM（Microsoft.Compute/virtualMachines）
+    - 場所が日本東または日本西
+  
+  そのとき：
+    - VM作成は許可する
+    - でも、作成後に自動的にデータ収集ルールを紐づける
+    - 紐づけるときに必要な権限（Log Analytics Contributor）を自動で付与
+```
+
+**実際の動き**:
+
+```
+1. ユーザーが「東日本リージョンにVMを作ろう」とする
+   ↓
+2. Azureが「これはMicrosoft.Compute/virtualMachinesで、location=japaneastだな」と判定
+   ↓
+3. ポリシーのifに引っかかる（allOfの両方に一致）
+   ↓
+4. thenが実行される（effect: DeployIfNotExists）
+   ↓
+5. VM作成は許可される
+   ↓
+6. でも、作成後に自動的にARM Templateがデプロイされる
+   ↓
+7. ARM Templateが「Microsoft.Insights/dataCollectionRuleAssociations」を作る
+   ↓
+8. VMとData Collection Ruleが紐づく
+   ↓
+9. VMのログが自動的にLog Analyticsに送られるようになる
+```
+
+**なぜこんなに複雑なのか**:
+
+「VMを作ったら自動で監視設定を入れたい」という要求を実現するため。
+
+- `Deny`系: シンプル（「これは作らせない」だけ）
+- `DeployIfNotExists`系: 複雑（「作った後に自動で設定を追加」）
+
+### ポリシーセット定義（イニシアチブ）とは？
+
+ポリシーセット定義は、「複数のポリシーをまとめたもの」です。
+
+**なぜ必要か**:
+
+個別のポリシーを1個1個割り当てるのは大変。
+
+```
+management管理グループに以下を割り当てたい：
+- VMの診断設定
+- Storageの診断設定
+- VNetの診断設定
+- NSGの診断設定
+- Public IPの診断設定
+- Load Balancerの診断設定
+...（数十個）
+```
+
+**ポリシーセットがあれば**:
+
+→ 「Deploy-Diagnostics-LogAnalytics」という1個のセットを割り当てるだけで、全部適用される！
+
+**実際の例**: `Deploy-Diagnostics-LogAnalytics.json`
+
+GitHubで見る: https://github.com/Azure/Azure-Landing-Zones-Library/blob/main/platform/alz/policy_set_definitions/Deploy-Diagnostics-LogAnalytics.json
+
+```json
+{
+  "name": "Deploy-Diagnostics-LogAnalytics",
+  "type": "Microsoft.Authorization/policySetDefinitions",
+  "apiVersion": "2021-06-01",
+  "properties": {
+    "policyType": "Custom",
+    "displayName": "診断設定を Log Analytics にデプロイ",
+    "description": "複数のリソースタイプの診断設定を Log Analytics ワークスペースにデプロイします。",
+    "metadata": {
+      "version": "1.0.0",
+      "category": "Monitoring"
+    },
+    "parameters": {
+      "logAnalyticsWorkspaceId": {
+        "type": "String",
+        "metadata": {
+          "displayName": "Log Analytics ワークスペース ID",
+          "description": "診断ログの送信先となる Log Analytics ワークスペースのリソース ID"
+        }
+      }
+    },
+    "policyDefinitions": [
+      {
+        "policyDefinitionId": "/providers/Microsoft.Management/managementGroups/alz/providers/Microsoft.Authorization/policyDefinitions/Deploy-Diagnostics-VM",
+        "parameters": {
+          "logAnalyticsWorkspaceId": {
+            "value": "[parameters('logAnalyticsWorkspaceId')]"
+          }
+        }
+      },
+      {
+        "policyDefinitionId": "/providers/Microsoft.Management/managementGroups/alz/providers/Microsoft.Authorization/policyDefinitions/Deploy-Diagnostics-VNET",
+        "parameters": {
+          "logAnalyticsWorkspaceId": {
+            "value": "[parameters('logAnalyticsWorkspaceId')]"
+          }
+        }
+      },
+      {
+        "policyDefinitionId": "/providers/Microsoft.Management/managementGroups/alz/providers/Microsoft.Authorization/policyDefinitions/Deploy-Diagnostics-Storage",
+        "parameters": {
+          "logAnalyticsWorkspaceId": {
+            "value": "[parameters('logAnalyticsWorkspaceId')]"
+          }
+        }
+      }
+      // ... 実際には20個以上のポリシー定義が含まれる
+    ]
+  }
+}
+```
+
+**このポリシーセットを日本語に翻訳すると**:
+
+```
+ポリシーセット名: Deploy-Diagnostics-LogAnalytics
+
+パラメータ:
+  - logAnalyticsWorkspaceId: どのLog Analyticsワークスペースにログを送るか
+
+含まれるポリシー:
+  1. Deploy-Diagnostics-VM（VMの診断設定）
+     → logAnalyticsWorkspaceIdを渡す
+  2. Deploy-Diagnostics-VNET（VNetの診断設定）
+     → logAnalyticsWorkspaceIdを渡す
+  3. Deploy-Diagnostics-Storage（Storageの診断設定）
+     → logAnalyticsWorkspaceIdを渡す
+  ...（全20個以上）
+```
+
+**実際の動き**:
+
+```
+1. あなたがplatform-landing-zone.auto.tfvarsで設定
+   policy_default_values = {
+     log_analytics_workspace_id = "/subscriptions/.../workspaces/law-001"
+   }
+   ↓
+2. management管理グループに「Deploy-Diagnostics-LogAnalytics」セットが割り当てられる
+   ↓
+3. セット内の全ポリシー（20個以上）が一気に適用される
+   ↓
+4. 各ポリシーにlog_analytics_workspace_id = "/subscriptions/.../workspaces/law-001"が渡される
+   ↓
+5. VMを作ったら → 自動で診断設定が入る → law-001にログが送られる
+   VNetを作ったら → 自動で診断設定が入る → law-001にログが送られる
+   Storageを作ったら → 自動で診断設定が入る → law-001にログが送られる
+```
+
+### 実際の使われ方：全体の流れ
+
+**ステップ1: ALZ Providerが公式ライブラリを読み込む**
+
+```hcl title="terraform.tf"
+provider "alz" {
+  library_overwrite_enabled = true
+  library_references = [
+    {
+      custom_url = "${path.root}/lib"  # あなたのカスタム定義
+    }
+    # 公式ライブラリ（GitHub）は自動で読み込まれる
+  ]
+}
+```
+
+**ステップ2: data "alz_architecture"が統合する**
+
+```hcl title="公式モジュール: main.tf"
+data "alz_architecture" "this" {
+  name = "alz_custom"  # あなたのアーキテクチャ定義（lib/architecture_definitions/alz_custom.alz_architecture_definition.yaml）
+}
+```
+
+**内部で何が起きているか**:
+
+```
+1. ALZ Providerが起動
+   ↓
+2. GitHubの公式ライブラリをダウンロード
+   https://github.com/Azure/Azure-Landing-Zones-Library
+   ↓
+3. 公式ライブラリのJSONファイルを全部読み込む
+   - archetype_definitions/: 11個
+   - policy_definitions/: 数百個
+   - policy_set_definitions/: 数十個
+   - role_definitions/: 数個
+   ↓
+4. あなたのlib/フォルダのYAMLファイルも読み込む
+   - architecture_definitions/alz_custom.alz_architecture_definition.yaml
+   - archetype_definitions/*_custom.alz_archetype_override.yaml
+   ↓
+5. 両方を統合する
+   - あなたのarchetype_overrideで「base_archetype: management」と書いてあれば
+   - 公式のalz_management.alz_archetype_definition.jsonを読んで
+   - 「policy_assignments_to_add」で追加
+   - 「policy_assignments_to_remove」で削除
+   ↓
+6. 最終的な設定がdata.alz_architecture.thisに入る
+```
+
+**ステップ3: 結果を確認**
+
+`data.alz_architecture.this`に入っているデータ：
+
+```
+data.alz_architecture.this = {
+  management_groups = [
+    {
+      id = "management"
+      archetypes = ["management_custom"]
+      policy_definitions = {
+        "Deny-Classic-Resources" = "{公式ライブラリのJSON}",
+        "Deploy-VM-Monitoring" = "{公式ライブラリのJSON}",
+        ...（数百個）
+      }
+      policy_assignments = {
+        "Deploy-AzActivity-Log" = "{割り当て設定}",
+        "Deploy-VM-Monitoring" = "{割り当て設定}",
+        ...
+      }
+    },
+    ...
+  ]
+}
+```
+
+### カスタマイズのパターン
+
+**パターン1: 公式ポリシーをそのまま使う**
+
+```yaml title="lib/archetype_definitions/management_custom.alz_archetype_override.yaml"
+base_archetype: management  # 公式の"management"をベースにする
+name: management_custom
+policy_assignments_to_add: []  # 追加なし
+policy_assignments_to_remove: []  # 削除なし
+policy_definitions_to_add: []
+policy_definitions_to_remove: []
+```
+
+**結果**:
+
+→ 公式のalz_management.alz_archetype_definition.jsonに書いてあるポリシーがそのまま適用される
+
+**パターン2: 公式ポリシーを一部削除**
+
+```yaml title="lib/archetype_definitions/management_custom.alz_archetype_override.yaml"
+base_archetype: management
+name: management_custom
+policy_assignments_to_remove:
+  - Deploy-VM-Monitoring  # この公式ポリシーは使わない
+```
+
+**結果**:
+
+```
+公式のalz_management.alz_archetype_definition.jsonには：
+  - Deploy-AzActivity-Log
+  - Deploy-VM-Monitoring
+  - Deploy-VMSS-Monitoring
+  - Deploy-Resource-Diag
+
+あなたの設定で削除：
+  - Deploy-VM-Monitoring
+
+最終的に適用されるポリシー：
+  - Deploy-AzActivity-Log
+  - Deploy-VMSS-Monitoring
+  - Deploy-Resource-Diag
+```
+
+**パターン3: 公式ポリシー + カスタムポリシー**
+
+```yaml title="lib/archetype_definitions/management_custom.alz_archetype_override.yaml"
+base_archetype: management
+name: management_custom
+policy_assignments_to_add:
+  - My-Custom-Policy  # 自分のポリシーを追加
+policy_definitions_to_add:
+  - My-Custom-Policy  # 定義も追加
+```
+
+**結果**:
+
+```
+公式のポリシー：
+  - Deploy-AzActivity-Log
+  - Deploy-VM-Monitoring
+  - Deploy-VMSS-Monitoring
+  - Deploy-Resource-Diag
+
+あなたのカスタムポリシー：
+  - My-Custom-Policy
+
+最終的に適用されるポリシー：
+  - Deploy-AzActivity-Log
+  - Deploy-VM-Monitoring
+  - Deploy-VMSS-Monitoring
+  - Deploy-Resource-Diag
+  - My-Custom-Policy（←追加）
+```
+
+### 公式ポリシーの主要カテゴリ
+
+| カテゴリ | ポリシー例 | 何をするか |
+|---------|-----------|----------|
+| **Deny系** | Deny-Classic-Resources | 古いタイプのリソース（Classic VM）を作らせない |
+| | Deny-Subnet-Without-Nsg | NSG（ファイアウォール）のないサブネットを作らせない |
+| | Deny-Public-IP-Without-DNS | DNS名のないPublic IPを作らせない |
+| **Deploy系** | Deploy-MDFC-Config | Microsoft Defenderを自動で有効化 |
+| | Deploy-VM-Monitoring | VMに監視エージェントを自動インストール |
+| | Deploy-Diagnostics-LogAnalytics | 診断設定を自動で追加（ログをLog Analyticsに送る） |
+| **Audit系** | Audit-UnusedResources | 使われていないリソースを検出 |
+| | Audit-PublicIP | Public IPの使用状況を監査 |
+| **Modify系** | Modify-NSG-Rules | NSGのルールを自動修正 |
+
+### よくある質問
+
+**Q: 公式ライブラリの更新はどうなる？**
+
+A: ALZ Providerのバージョンを上げると、新しいポリシー定義が自動的に取り込まれます。
+
+```hcl title="terraform.tf"
+terraform {
+  required_providers {
+    alz = {
+      source  = "Azure/alz"
+      version = "0.20.0"  # ←これを0.21.0に上げると新しいポリシーが使える
+    }
+  }
+}
+```
+
+**実際の動き**:
+
+```
+version = "0.20.0"のとき
+↓
+公式ライブラリの2024年1月版を読む
+↓ version = "0.21.0"に変更
+↓
+公式ライブラリの2024年6月版を読む（新しいポリシーが追加されてる）
+```
+
+**Q: 公式ポリシーを変更したい場合は？**
+
+A: 公式ポリシーを直接変更することはできません。代わりに：
+
+**方法1: パラメータを変更する**
+
+```hcl title="platform-landing-zone.auto.tfvars"
+management_group_settings = {
+  policy_assignments_to_modify = {
+    management = {
+      policy_assignments = {
+        Deploy-VM-Monitoring = {
+          parameters = {
+            dataCollectionRuleId = "/subscriptions/.../my-custom-dcr"
+          }
+        }
+      }
+    }
+  }
+}
+```
+
+**方法2: カスタムポリシーを作成して追加**
+
+```yaml title="lib/archetype_definitions/management_custom.alz_archetype_override.yaml"
+policy_assignments_to_add:
+  - My-Custom-VM-Monitoring
+policy_definitions_to_add:
+  - My-Custom-VM-Monitoring
+```
+
+```json title="lib/policy_definitions/My-Custom-VM-Monitoring.json"
+{
+  "name": "My-Custom-VM-Monitoring",
+  ...
+}
+```
+
+**Q: どのポリシーが割り当てられているか確認したい**
+
+A: 3つの方法があります：
+
+1. **GitHubで確認**:
+   https://github.com/Azure/Azure-Landing-Zones-Library/tree/main/platform/alz/archetype_definitions
+   
+2. **Azureポータルで確認**:
+   管理グループ → ポリシー → 割り当て
+
+3. **Terraform planで確認**:
+   ```bash
+   terraform plan
+   ```
+   出力に「どのポリシーが割り当てられるか」が表示される
+
+---
+
+## Part 9: 実践パターン
 
 よくあるカスタマイズパターンを紹介します。
 
@@ -1591,7 +2319,8 @@ management_group_settings = {
 5. **locals.tf**: 依存関係の管理と設定の変換
 6. **ローカルモジュール**: データ変換とパラメータ整形
 7. **公式モジュール**: Azure公式モジュールの内部構造
-8. **実践パターン**: よくあるカスタマイズ方法
+8. **公式ALZライブラリ**: Microsoft公式のポリシー定義・アーキタイプの詳細
+9. **実践パターン**: よくあるカスタマイズ方法
 
 **次のChapter**:
 
