Update Part 8: 追加の修正

--- a/docs-site/docs/08_管理グループとポリシー.md
+++ b/docs-site/docs/08_管理グループとポリシー.md
@@ -13,6 +13,8 @@
     8. 公式のAzureポリシーを解説
     9. 実践パターン（カスタマイズ方法）
 
+    この章の内容はめちゃめちゃ長いですが、一番重要なところなので頑張りましょう！！
+
 ---
 
 ## Part 1: 管理グループの階層構造
@@ -795,11 +797,6 @@ data "alz_architecture" "this" {
 
   GitHub上の公式ライブラリから、`Deny-Classic-Resources`とか`Deploy-MDFC-Config`とかのポリシー定義を全部読み込む。
 
-  **公式ライブラリの場所**:
-
-  https://github.com/Azure/Azure-Landing-Zones-Library
-
-  このリポジトリには、Microsoft公式のALZポリシー定義・ポリシーセット定義・ロール定義などがすべて含まれている。ALZ Providerが自動的にこのリポジトリから最新のポリシーを読み込んで、`data.alz_architecture.this`に統合してくれる。
   公式のポリシーについては、この章のパート9で詳しく解説します。
 
 - **6. カスタム設定を適用**
@@ -1433,6 +1430,7 @@ parent_id = each.value.scope
 
 **GitHubリポジトリ**:
 
+↓このリポジトリを開きながら見ていきましょう
 https://github.com/Azure/Azure-Landing-Zones-Library
 
 このリポジトリには、Microsoft公式のALZ（Azure Landing Zones）ポリシー定義・ポリシーセット定義・ロール定義などがすべて含まれています。
