Chapter 08: 重要な注意書きを太字で強調

--- a/docs-site/docs/08_管理グループとポリシー.md
+++ b/docs-site/docs/08_管理グループとポリシー.md
@@ -13,7 +13,7 @@
     8. 公式のAzureポリシーを解説
     9. 実践パターン（カスタマイズ方法）
 
-    この章の内容はめちゃめちゃ長いですが、一番重要なところなので頑張りましょう！！
+    **この章の内容はめちゃめちゃ長いですが、一番重要なところなので頑張りましょう！！**
 
 ---
 
