Chapter 08: ステップ1でlibフォルダの場所を明確化（このリポジトリと公式ライブラリの区別）

--- a/docs-site/docs/08_管理グループとポリシー.md
+++ b/docs-site/docs/08_管理グループとポリシー.md
@@ -722,7 +722,12 @@ https://github.com/Azure/terraform-azurerm-avm-ptn-alz
 
 ### ステップ1: YAMLファイルを読み込む
 
-**目的**: lib/フォルダのYAMLファイルを読み込んで、「どんな管理グループを作るか」「どんなポリシーを適用するか」を把握する。
+**目的**: YAMLファイルを読み込んで、「どんな管理グループを作るか」「どんなポリシーを適用するか」を把握する。
+
+**読み込むYAMLの場所**:
+
+- **このリポジトリの `lib/` フォルダ**: カスタム設定（アーキテクチャ定義、アーキタイプのオーバーライド）
+- **GitHub上の公式ALZライブラリ**: ポリシー定義、ポリシーセット定義、ベースアーキタイプ
 
 **公式モジュールのファイル**: `main.tf`
 
@@ -743,18 +748,33 @@ data "alz_architecture" "this" {
 
 !!! info "前提: ALZ Providerの設定が必要"
     このデータソースを使うには、事前にALZ Providerの設定が必要です（このリポジトリでは[terraform.tf](terraform.tf#L24-L31)で設定済み）。
-    プロバイダー設定で`library_references`に`${path.root}/lib`を指定することで、YAMLファイルの場所を教えています。
+    
+    ```hcl
+    provider "alz" {
+      library_references = [
+        {
+          custom_url = "${path.root}/lib"  # ← このリポジトリのlibフォルダ
+        }
+      ]
+    }
+    ```
+    
+    この設定により、**このリポジトリの `lib/` フォルダ**からカスタム定義を読み込みます。
+    公式のALZライブラリ（GitHubのAzure/Azure-Landing-Zones-Library）は自動的に読み込まれます。
 
 これを使うと：
 
-- **1. プロバイダー設定で指定したYAMLを自動で読む**
+- **1. カスタムYAMLを読み込む（このリポジトリの `lib/` フォルダ）**
+
+  プロバイダー設定で指定した `${path.root}/lib` から、アーキテクチャ定義とアーキタイプのオーバーライドを読み込む。
+
 - **2. name で指定したアーキテクチャを探す**
 
   ```hcl
   name = var.architecture_name  # "alz_custom"
   ```
 
-  `lib/architecture_definitions/alz_custom.alz_architecture_definition.yaml` を読む
+  **このリポジトリの** `lib/architecture_definitions/alz_custom.alz_architecture_definition.yaml` を読む
 
 - **3. YAMLの内容を解析する**
 
@@ -783,7 +803,7 @@ data "alz_architecture" "this" {
 
 - **4. アーキタイプ定義も読み込む**
 
-  各管理グループの `archetypes: [root_custom]` を見て、`lib/archetype_definitions/root_custom.alz_archetype_override.yaml` も読む：
+  各管理グループの `archetypes: [root_custom]` を見て、**このリポジトリの** `lib/archetype_definitions/root_custom.alz_archetype_override.yaml` も読む：
   
   ```yaml
   name: root_custom
@@ -793,11 +813,13 @@ data "alz_architecture" "this" {
   # ...
   ```
 
-- **5. 公式ライブラリのポリシー定義も読み込む**
+- **5. 公式ライブラリのポリシー定義も読み込む（GitHub上の別リポジトリ）**
 
-  GitHub上の公式ライブラリから、`Deny-Classic-Resources`とか`Deploy-MDFC-Config`とかのポリシー定義を全部読み込む。
-
-  公式のポリシーについては、この章のパート9で詳しく解説します。
+  ALZ Providerは自動的に **GitHub上の公式ALZライブラリ**（`Azure/Azure-Landing-Zones-Library`）からも読み込みます。
+  
+  ここから `Deny-Classic-Resources` や `Deploy-MDFC-Config` などのポリシー定義を全部読み込みます。
+  
+  公式ライブラリの中身については、この章のパート8で詳しく解説します。
 
 - **6. カスタム設定を適用**
 
